--- a/proj/roomsmanagement/templates/roomsmanagement/home.html
+++ b/proj/roomsmanagement/templates/roomsmanagement/home.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<a href='/update_db'>update_db</a>
+<a href='/list_rooms'>list_rooms</a>
+<a href='/search'>search</a>
 
 </body>
 </html>
