Add fenixedu auth system

--- a/proj/roomsmanagement/templates/roomsmanagement/home.html
+++ b/proj/roomsmanagement/templates/roomsmanagement/home.html
@@ -5,6 +5,7 @@
 <a href='/update_db'>update_db</a>
 <a href='/list_rooms'>list_rooms</a>
 <a href='/search'>search</a>
+<a href='/login'>login</a>
 
 </body>
 </html>
