--- a/proj/roomsmanagement/templates/roomsmanagement/index.html
+++ b/proj/roomsmanagement/templates/roomsmanagement/index.html
@@ -20,13 +20,13 @@
     <link href="{% static 'roomsmanagement/css/now-ui-kit.css' %}" rel="stylesheet" />
 </head>
 
-<body class="template-page sidebar-collapse">
+<body class="sidebar-collapse">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary fixed-top " color-on-scroll="400">
+    <nav class="navbar navbar-expand-lg bg-info fixed-top">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="http://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
-                    Now Ui Kit
+                <a class="navbar-brand" href="#" target="_blank">
+                    Rooms Management
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
@@ -34,32 +34,45 @@
                     <span class="navbar-toggler-bar bar3"></span>
                 </button>
             </div>
-            <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
+            <div class="collapse navbar-collapse justify-content-end" id="navigation">
                 <ul class="navbar-nav">
+
                     <li class="nav-item">
-                        <a class="nav-link" href="#pablo">
-                            <p>Link</p>
-                        </a>
+                        <a class="nav-link" href="#pablo"><i class="now-ui-icons ui-1_send" aria-hidden="true"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pablo">
-                            <p>Link</p>
-                        </a>
+                        <a class="nav-link" href="#pablo"><i class="now-ui-icons users_single-02" aria-hidden="true"></i></a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-expanded="false">
+                            <i class="now-ui-icons ui-1_settings-gear-63" aria-hidden="true"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-header">Dropdown header</a>
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                            <div class="divider"></div>
+                            <a class="dropdown-item" href="#">Separated link</a>
+                            <div class="divider"></div>
+                            <a class="dropdown-item" href="#">One more separated link</a>
+                        </div>
+                    </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
+                        <a class="nav-link" href="https://twitter.com/CreativeTim" target="_blank">
                             <i class="fa fa-twitter"></i>
                             <p class="d-lg-none d-xl-none">Twitter</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
+                        <a class="nav-link" href="https://www.facebook.com/CreativeTim" target="_blank">
                             <i class="fa fa-facebook-square"></i>
                             <p class="d-lg-none d-xl-none">Facebook</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
+                        <a class="nav-link" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
                             <i class="fa fa-instagram"></i>
                             <p class="d-lg-none d-xl-none">Instagram</p>
                         </a>
@@ -69,61 +82,54 @@
         </div>
     </nav>
     <!-- End Navbar -->
+    
     <div class="wrapper">
-        <div class="page-header">
-            <div class="page-header-image" data-parallax="true" style="background-image: ;">
-            </div>
-        </div>
         <div class="section">
+            
+            {% if user %}
+                <p>Loggedin!</p>
+            {% else %}
+                <a href="/login/">Login with fenix account</a>
+            {% endif %}
+
+
         </div>
         <footer class="footer">
             <div class="container">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="https://www.creative-tim.com">
-                                Creative Tim
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://presentation.creative-tim.com">
-                                About Us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://blog.creative-tim.com">
-                                Blog
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                                MIT License
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                
                 <div class="copyright">
-                    &copy;
+                    &copy;                      
                     <script>
-                        document.write(new Date().getFullYear())
-                    </script>, Designed by
-                    <a href="http://www.invisionapp.com" target="_blank">Invision</a>. Coded by
+                            document.write(new Date().getFullYear())
+                    </script>
+
+                    Theme: <a href="http://demos.creative-tim.com/now-ui-kit/index.html" target="_blank">
+                        Now UI Kit</a>, Designed by: <a href="http://www.invisionapp.com" target="_blank">Invision</a>, Coded by
                     <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                    <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
+                        MIT License
+                    </a>
                 </div>
             </div>
         </footer>
     </div>
 </body>
 <!--   Core JS Files   -->
-<script src="../assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
-<script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="../assets/js/plugins/bootstrap-switch.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-<script src="../assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="{% static 'roomsmanagement/js/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'roomsmanagement/js/popper.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'roomsmanagement/js/bootstrap.min.js' %}" type="text/javascript"></script>
+
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-<script src="../assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
+<script src="{% static 'roomsmanagement/js/now-ui-kit.js' %}" type="text/javascript"></script>
+
+<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+<!-- <script src="../assets/js/plugins/bootstrap-switch.js"></script> -->
+
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<!-- <script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script> -->
+
+<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
+<!-- <script src="../assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script> -->
+
+
 </html>
