--- a/proj/roomsmanagement/templates/roomsmanagement/index.html
+++ b/proj/roomsmanagement/templates/roomsmanagement/index.html
@@ -1,135 +1,29 @@
-{% load static %}
+{% extends "roomsmanagement/base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'roomsmanagement/img/apple-icon.png' %}">
-    <link rel="icon" type="image/png" href="{% static 'roomsmanagement/img/favicon.png' %}">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-    <title>Rooms Management - Welcome!</title>
-
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-    <!--     Fonts and icons     -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="{% static 'roomsmanagement/css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'roomsmanagement/css/now-ui-kit.css' %}" rel="stylesheet" />
-</head>
-
-<body class="sidebar-collapse">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-info fixed-top">
+{% block content %}
+    <div class="page-header">
+    {% if request.session.ist_id %}
         <div class="container">
-            <div class="navbar-translate">
-                <a class="navbar-brand" href="#" target="_blank">
-                    Rooms Management
-                </a>
-                <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-bar bar1"></span>
-                    <span class="navbar-toggler-bar bar2"></span>
-                    <span class="navbar-toggler-bar bar3"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse justify-content-end" id="navigation">
-                <ul class="navbar-nav">
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#pablo"><i class="now-ui-icons ui-1_send" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#pablo"><i class="now-ui-icons users_single-02" aria-hidden="true"></i></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-expanded="false">
-                            <i class="now-ui-icons ui-1_settings-gear-63" aria-hidden="true"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-header">Dropdown header</a>
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                            <div class="divider"></div>
-                            <a class="dropdown-item" href="#">One more separated link</a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com/CreativeTim" target="_blank">
-                            <i class="fa fa-twitter"></i>
-                            <p class="d-lg-none d-xl-none">Twitter</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/CreativeTim" target="_blank">
-                            <i class="fa fa-facebook-square"></i>
-                            <p class="d-lg-none d-xl-none">Facebook</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
-                            <i class="fa fa-instagram"></i>
-                            <p class="d-lg-none d-xl-none">Instagram</p>
-                        </a>
-                    </li>
-                </ul>
+            <div class="col-md-4 content-center">
+                <form class="form" method="get" action="{% url 'search' %}">
+                    {% comment %} {% csrf_token %} {% endcomment %}
+                    <div class="form-group">
+                        <input name="room" type="text" value="" placeholder="Search room..." class="form-control" />
+                    </div>
+                    <div class="text-center">
+                        <input type="submit" value="Search"  class="btn btn-primary btn-round btn-lg btn-block" />
+                    </div>
+                </form>
             </div>
         </div>
-    </nav>
-    <!-- End Navbar -->
-    
-    <div class="wrapper">
-        <div class="section">
-            
-            {% if user %}
-                <p>Loggedin!</p>
-            {% else %}
-                <a href="/login/">Login with fenix account</a>
-            {% endif %}
-
-
-        </div>
-        <footer class="footer">
-            <div class="container">
-                
-                <div class="copyright">
-                    &copy;                      
-                    <script>
-                            document.write(new Date().getFullYear())
-                    </script>
-
-                    Theme: <a href="http://demos.creative-tim.com/now-ui-kit/index.html" target="_blank">
-                        Now UI Kit</a>, Designed by: <a href="http://www.invisionapp.com" target="_blank">Invision</a>, Coded by
-                    <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-                    <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                        MIT License
-                    </a>
+    {% else %}
+        <div class="container">
+            <div class="col-md-4 content-center">
+                <div class="text-center">
+                    <a href="{% url 'login' %}" class="btn btn-primary btn-round btn-lg btn-block">Login using Fenix</a>
                 </div>
             </div>
-        </footer>
-    </div>
-</body>
-<!--   Core JS Files   -->
-<script src="{% static 'roomsmanagement/js/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'roomsmanagement/js/popper.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'roomsmanagement/js/bootstrap.min.js' %}" type="text/javascript"></script>
-
-<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-<script src="{% static 'roomsmanagement/js/now-ui-kit.js' %}" type="text/javascript"></script>
-
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<!-- <script src="../assets/js/plugins/bootstrap-switch.js"></script> -->
-
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<!-- <script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script> -->
-
-<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-<!-- <script src="../assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script> -->
-
-
-</html>
+        </div>
+    {% endif %}
+</div>
+{% endblock %}
