--- a/proj/templates/admin/base_site.html
+++ b/proj/templates/admin/base_site.html
@@ -1,31 +1,26 @@
 {% load static %}
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'roomsmanagement/img/apple-icon.png' %}">
+    <title>Rooms Management Administration</title>
     <link rel="icon" type="image/png" href="{% static 'roomsmanagement/img/favicon.png' %}">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-    <title>Rooms Management</title>
-
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css" href="{% static 'roomsmanagement/css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'roomsmanagement/css/now-ui-kit.css' %}" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <!-- CSS Files -->
-    <link href="{% static 'roomsmanagement/css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'roomsmanagement/css/now-ui-kit.css' %}" rel="stylesheet" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+
 </head>
 
+
 <body class="sidebar-collapse">
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-primary fixed-top">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="{% url 'index' %}">Rooms Management</a>
+                <a class="navbar-brand" href="{% url 'admin:index' %}">Rooms Management Administration</a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-bar bar1"></span>
                     <span class="navbar-toggler-bar bar2"></span>
@@ -37,19 +32,18 @@
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-expanded="false">
                             <i class="now-ui-icons users_single-02" aria-hidden="true"></i>
-                            {% if request.session.ist_id %}
-                                <p>{{ request.session.full_name.split.0}} {{request.session.full_name.split|last }}</p>
+
+                            {% if has_permission %}
+                                <p>{% firstof user.get_short_name user.get_username %}</p>
                             {% else %}
                                 <p>Guest</p>
                             {% endif %}
-                            {% comment %} <p class="d-lg-none d-xl-none">User settings</p> {% endcomment %}
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                            {% if request.session.ist_id %}
-                                <a class="dropdown-item" href="{% url 'profile' %}">User details</a>
-                                <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                            {% if has_permission %}
+                                <a class="dropdown-item" href="{% url 'admin:logout' %}">Logout</a>
                             {% else %}
-                                <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+                                <a class="dropdown-item" href="{% url 'admin:login' %}">Login</a>
                             {% endif %}
                         </div>
                     </li>
@@ -57,26 +51,30 @@
             </div>
         </div>
     </nav>
-    <!-- End Navbar -->
-    
+
     <div class="wrapper">
         {% block content %}
-        {% endblock %}
-         <footer class="footer">
-                <div class="container">
-                    <div class="copyright">
-                        &copy;
-                        <script>
-                            document.write(new Date().getFullYear())
-                        </script>
-                        Theme: <a href="http://demos.creative-tim.com/now-ui-kit/index.html" target="_blank">
-                        Now UI Kit</a>, Designed by: <a href="http://www.invisionapp.com" target="_blank">Invision</a>, Coded by
-                        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">MIT License</a>
-                        </div>
-                </div>
-            </footer>
+        {% endblock %}        
     </div>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="copyright">
+                    &copy;
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>
+                    Theme: <a href="http://demos.creative-tim.com/now-ui-kit/index.html" target="_blank">
+                    Now UI Kit</a>, Designed by: <a href="http://www.invisionapp.com" target="_blank">Invision</a>, Coded by
+                    <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                    <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">MIT License</a>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    </div>
+<!-- END Container -->
 </body>
 <!--   Core JS Files   -->
 <script src="{% static 'roomsmanagement/js/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
