--- a/proj/roomsmanagement/templates/roomsmanagement/base.html
+++ b/proj/roomsmanagement/templates/roomsmanagement/base.html
@@ -84,4 +84,5 @@
 <script src="{% static 'roomsmanagement/js/bootstrap.min.js' %}" type="text/javascript"></script>
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="{% static 'roomsmanagement/js/now-ui-kit.js' %}" type="text/javascript"></script>
+<script src="{% static 'roomsmanagement/js/ajax.js' %}" type="text/javascript"></script>
 </html>
