--- a/proj/admin/templates/admin/base.html
+++ b/proj/admin/templates/admin/base.html
@@ -77,9 +77,12 @@
 <!-- END Container -->
 </body>
 <!--   Core JS Files   -->
-<script src="{% static 'roomsmanagement/js/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'roomsmanagement/js/popper.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'roomsmanagement/js/bootstrap.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'admin/js/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'admin/js/popper.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'admin/js/bootstrap.min.js' %}" type="text/javascript"></script>
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-<script src="{% static 'roomsmanagement/js/now-ui-kit.js' %}" type="text/javascript"></script>
+<script src="{% static 'admin/js/now-ui-kit.js' %}" type="text/javascript"></script>
+{% block javascript %}
+{% endblock %}
+
 </html>
