--- a/proj/roomsmanagement/templates/roomsmanagement/room.html
+++ b/proj/roomsmanagement/templates/roomsmanagement/room.html
@@ -1,4 +1,5 @@
 {% extends "roomsmanagement/base.html" %}
+{% load static %}
 
 {% block content %}
 <div class="section">
@@ -26,7 +27,7 @@
             <div class="message">
                 <tr>
                     <td>
-                        <h6>{{ message.timestamp }}</h6>
+                        <h6>{{ message.date|date:'Y-m-d H:i:s' }}</h6>
                     </td>
                     <td>
                         <h6>{{ message.content }}</h6>
@@ -47,5 +48,9 @@
         {% endif %}
     </div>
 </div>
+{% endblock %}
 
+
+{% block javascript %}
+<script src="{% static 'roomsmanagement/js/ajax.js' %}" type="text/javascript"></script>
 {% endblock %}
